--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ body {
   background-color: var(--main-backround-color);
   color: var(--main-text-color);
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
   font-size: 14px;
   letter-spacing: 0.03em;
 }
@@ -163,7 +162,7 @@ line-height: 1.71;
 }
 
 /* Галерея */
-.gallety-button {
+.gallery-button {
   color: var(--header-text-color);
   background-color: var(--secondary-backround-color);
   font-family: inherit;
